# CSC4005-Parallel-Computing-2023Fall

./: .gitignore  README.md
docs/: Cluster & Slurm User Guide.md  Instruction on Passwordlessly Connecting to Cluster by Setting Up SSH Key Authentification.md  docker_installation_guide.md
project-N-body/: nbody.cpp  nbody.hpp  sequential.cpp
project1/: .clang-format  CMakeLists.txt  Project1-PartA-Results.txt  Project1-PartB-Results.txt  README.md  run.sh  workspace.md
project1/src/: CMakeLists.txt  utils.cpp  utils.hpp
project2/: .clang-format  .gitignore  CMakeLists.txt  Project2-Results.txt  Project2-Robust-Results.txt  README.md  appendix.md  robust_run.sh  run.sh
project2/matrices/: matrix10.txt  matrix2.txt  matrix3.txt  matrix4.txt  matrix5.txt  matrix6.txt  matrix9.txt  matrixa.txt  matrixb.txt  matrixc.txt  matrixd.txt
project2/profiling/: naive.txt  task1-memory-locality.txt  task2-SIMD+Reordering.txt  task3-OpenMP-SIMD-Reordering.txt  task4-mpi.txt  task5-cuda.txt
project2/src/: CMakeLists.txt  generate_matrix.py  locality.cpp  matrix.cpp  (+7 more)
project2/src/gpu/: CMakeLists.txt  cuda.cu  cudaMul.cu  openacc.cpp  openaccMul.cpp
project3/: CMakeLists.txt  README.md  requirement.md  run.sh
project4/: .gitignore  CMakeLists.txt  PC.txt  Project4-Results.txt  README.md  requirement.md  run.sh  run_pc.sh  sbatch.sh  test.sh
sample_programs/: README.md  avx512_vectorized_addition  avx512_vectorized_addition.cpp  cuda_hello  cuda_hello.cu  mpi_hello  mpi_hello.cpp  openacc_parallel.cpp  openmp_hello  openmp_hello.cpp  pthread_hello  pthread_hello.cpp
(+86 files in other folders)
